[package]
name = "rohit_grep"
version = "0.1.0"
edition = "2021"
authors = ["Rohit Joshi bhdream000@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
homepage = "https://github.com/DJ7999/rgrep"
repository = "https://github.com/DJ7999/rgrep"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
clap = { version = "4.5.17", features = ["derive"] }
indicatif = "0.17.8"
predicates = "3.1.2"

